[package]
name = "random_roll_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros", "rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rand = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
pretty_env_logger = "0.5"
dotenvy = "0.15"
